# projectTemplates

./: README.md
cpp_with_gtest/: .gitignore  CMakeLists.txt  README.md
cpp_with_gtest/3rd/gtest/: readme.txt
cpp_with_gtest/src/: main.cpp
